--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 
 - name: Update crontab
-  command: {{ xsibackup_working_dir }}/xsibackup/xsibackup --update-cron
+  command: "{{ xsibackup_working_dir }}/xsibackup/xsibackup --update-cron"
   args:
     executable: /bin/sh
