--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,6 +1,4 @@
 ---
 
 - name: Update crontab
-  shell: "{{ xsibackup_working_dir }}/xsibackup/xsibackup --update-cron"
-  args:
-    executable: /bin/sh
+  command: "{{ xsibackup_working_dir }}/xsibackup/xsibackup --update-cron"
