recurse on file permissions

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -33,10 +33,11 @@
   file:
     path: "{{ item }}"
     mode: 0700
+    recurse: true
   loop:
     - "{{ xsibackup_working_dir }}/xsibackup/xsibackup"
     - "{{ xsibackup_working_dir }}/xsibackup/src"
-    - "{{ xsibackup_working_dir }}/xsibackup/bin/*"
+    - "{{ xsibackup_working_dir }}/xsibackup/bin"
 
 - name: Create XSIBackup jobs
   template:
