--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -73,4 +73,4 @@
     - Update crontab
 
 - name: Install crontab
-  shell: "{{ xsibackup_working_dir }}/xsibackup/xsibackup --install-cron"
+  shell: "{{ xsibackup_working_dir }}/xsibackup/xsibackup --install-cron --exec=yes"
