--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -74,3 +74,5 @@
 
 - name: Install crontab
   shell: "{{ xsibackup_working_dir }}/xsibackup/xsibackup --install-cron --exec=yes"
+  register: result
+  changed_when: "'successfully' in result.stdout"
