--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,4 +2,4 @@
 
 - name: Update crontab
   shell: "{{ xsibackup_working_dir }}/xsibackup/xsibackup --update-cron --exec=yes"
-  failed_when: "result.stderr != -9"
+  failed_when: "result.rc != -9"
