--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -55,8 +55,6 @@
     regexp: ".*jobs/{{ item.name }}\"$"
     line: "{{ item.cron }} \"{{ xsibackup_working_dir }}/xsibackup/jobs/{{ item.name }}\""
   loop: "{{ xsibackup_jobs|flatten(levels=1) }}"
-  notify:
-    - Update crontab
 
 - name: Copy clean-backup script
   copy:
@@ -69,11 +67,13 @@
     path: "{{ xsibackup_working_dir }}/xsibackup/conf/root-crontab"
     regexp: "clean-backups.py"
     line: "{{ xsibackup_cleaner.cron }} /bin/python '{{ xsibackup_working_dir }}/clean-backups.py' -p {{ xsibackup_backup_dir }} -r 'backup*' -k {{ xsibackup_cleaner.days_to_keep }}"
-  notify:
-    - Update crontab
 
 - name: Install crontab
   shell: "{{ xsibackup_working_dir }}/xsibackup/xsibackup --install-cron --exec=yes"
   register: result
   changed_when: "'successfully' in result.stdout"
+  failed_when: "result.rc != -9"
+
+- name: Update crontab
+  shell: "{{ xsibackup_working_dir }}/xsibackup/xsibackup --update-cron --exec=yes"
   failed_when: "result.rc != -9"
