--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,7 +4,7 @@ xsibackup_version: 11.0.1
 xsibackup_working_dir: /vmfs/volumes/files/Misc/Test
 xsibackup_backup_dir: "{{ xsibackup_working_dir }}/Backups"
 xsibackup_jobs:
-  - name: '002'
+  - name: '002.j2'
     cron: '0 16 * * *'
 xsibackup_cleaner:
   cron: '0 19 * * *'
